fix truncate and refactor css

--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -132,6 +132,7 @@ $draft-color-light: #b2e6ee;
 $primary-font-family: "Inter", "Helvetica", "Arial", sans-serif;
 $secondary-font-family: "raptor_v2_premiumbold", "Helvetica", "Arial",
   sans-serif;
+$tertiary-font-family: "Roboto Condensed", sans-serif;
 $base-font-size: 14px;
 $base-line-height: 1.4em;
 
